--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -7,6 +7,6 @@
 default = homeland.settings
 shell = ipython
 
-[deploy]
-#url = http://localhost:6800/
+[deploy:homeland]
+url = http://localhost:6800/
 project = homeland
